--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,12 @@ jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.1.0
 jsonschema==4.4.0
+jupyter==1.0.0
+jupyter-client==7.1.2
+jupyter-console==6.4.3
+jupyter-core==4.9.2
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.1.0
 kiwisolver==1.4.0
 langcodes==3.3.0
 leaguepedia-parser==2.0.1
@@ -144,3 +150,4 @@ Werkzeug==2.3.0
 widgetsnbextension==3.6.0
 wsproto==1.2.0
 xlrd==2.0.1
+yeelight==0.7.10
