--- a/.config/uwsgi/LCKlol.ini
+++ b/.config/uwsgi/LCKlol.ini
@@ -7,7 +7,7 @@ uid = ubuntu
 pid = ubuntu
 
 socket = /tmp/LCKlol.sock
-chmod-socket = 666;
+chmod-socket = 666
 chown-socket = ubuntu:ubuntu
 
 enable-threads = ture
