--- a/.config/uwsgi/LCKlol.ini
+++ b/.config/uwsgi/LCKlol.ini
@@ -4,16 +4,15 @@ module = LCKlol.wsgi:application
 home = /home/ubuntu/myvenv/
 
 uid = ubuntu
-pid = ubuntu
+gid = ubuntu
 
 socket = /tmp/LCKlol.sock
 chmod-socket = 666
 chown-socket = ubuntu:ubuntu
 
-enable-threads = ture
-master = ture
+enable-threads = true
+master = true
 vacuum = true
 pidfile = /tmp/LCKlol.pid
 logto = /var/log/uwsgi/LCKlol/@(exec://date +%%Y-%%m-%%d).log
 log-reopen = true
-
