--- a/.config/nginx/LCKlol.conf
+++ b/.config/nginx/LCKlol.conf
@@ -4,12 +4,18 @@ server {
     charset utf-8;
     client_max_body_size 128M;
 
-    location / {
-        uwsgi_pass  unix:///tmp/LCKlol.sock;
-        include     uwsgi_params;
-    }
 
     location /static/ {
 	alias /srv/LCK.lol_2.0/static/;
     }
+
+    location /phpmyadmin {
+	alias /usr/share/nginx/html/phpmyadmin;
+	index index.php index.html index.htm;
+    }
+
+    #location / {
+    #    uwsgi_pass  unix:///tmp/LCKlol.sock;
+    #    include     uwsgi_params;
+    #}
 }
