--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # .gitignore
 
+index/management/commands/__pycache__
 index/__pycache__
 __pycache__/
+LCKlol/__pycache__
+
 update.sh
 index/management/commands/update.py
 LCKlol/settings.py
