--- a/.config/nginx/LCKlol.conf
+++ b/.config/nginx/LCKlol.conf
@@ -18,4 +18,8 @@ server {
     #    uwsgi_pass  unix:///tmp/LCKlol.sock;
     #    include     uwsgi_params;
     #}
+
+    if ($http_x_forworded_proto = 'http') {
+	return 301 https://$host$request_uri;
+    }
 }
