--- a/.config/uwsgi/LCKlol.ini
+++ b/.config/uwsgi/LCKlol.ini
@@ -1,7 +1,6 @@
 [uwsgi]
-chdir = /srv/LCK.lol_2.0/
+chdir = /home/ubuntu/LCK.lol_2.0/
 module = LCKlol.wsgi:application
-home = /home/ubuntu/myvenv/
 
 uid = ubuntu
 gid = ubuntu
