--- a/.config/uwsgi/LCKlol.ini
+++ b/.config/uwsgi/LCKlol.ini
@@ -1,6 +1,5 @@
 [uwsgi]
-chdir = /srv/LCK.lol_2.0/
-chdir = /home/ubuntu/LCKinfo.lol/
+chdir = /srv/LCKinfo.lol/
 module = LCKlol.wsgi:application
 
 uid = ubuntu
